Handler layer: get by table number, update, get by id

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -25,3 +25,11 @@ postgresTest = {
 	}
 	numThreads = 10
 }
+
+development = {
+	dbConfig = "postgres"
+}
+
+test = {
+	dbConfig = "postgresTest"
+}
